输出目录修正

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /NSeetaface/NSeetaface/Release/NSeetaface.tlog
 /NSeetaface/SeetafaceTool/bin/Release/netstandard2.0
 model/
+/FaceDetection/examples/FaceDetection/Debug/FaceDetection.tlog
+/FaceDetection/examples/FaceDetection/Debug
